hphp/hack/test/typecheck/hh_log_level_example.php
<?hh

function f(): void {
  hh_log_level("sub", "1");
}
